--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             </form>
         </div>
     </footer>
+    <div id="copyright">
+        Desenvolvido por Alison Matheus <a href="https://github.com/AlisonMatheus" target="_blank">| GitHub |</a> <a
+            href="https://www.linkedin.com/in/alison-matheus-de-simone-bb67a2215/" target="_blank">Linkedin |</a> <a
+            href="https://www.instagram.com/alisonmt.s" target="_blank">Instagram |</a>
+    </div>
 </body>
 
 </html>
